--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,11 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake-Modules/")
 include(EnableCPP11Flag)
 ENABLE_CPP11()
 
+find_package(OpenGL REQUIRED)
 find_package(GLFW REQUIRED)
 find_package(Springbok REQUIRED)
 
-include_directories(${CMAKE_SOURCE_DIR} ${SPRINGBOK_INCLUDE_DIR} ${GLFW_INCLUDE_DIR})
+include_directories(${SPRINGBOK_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
 
-add_executable(shinyavenger main.cpp Source/Game.cpp)
-target_link_libraries(shinyavenger ${GLFW_LIBRARY} ${SPRINGBOK_LIBRARY})
+add_executable(shinyavenger main.cpp Source/Game.cpp Source/Player.cpp Source/PlaySpace.cpp Source/PhysicsObject.h Source/Space.h Source/Game.h Source/Player.h Source/PlaySpace.h)
+target_link_libraries(shinyavenger ${GLFW_LIBRARY} ${SPRINGBOK_LIBRARY} ${OPENGL_LIBRARY})
