--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ find_package(Springbok REQUIRED)
 
 include_directories(${SPRINGBOK_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
 
-add_executable(shinyavenger main.cpp Source/Bullet.cpp Source/GravitySource.cpp Source/Game.cpp Source/Player.cpp Source/Enemy.cpp Source/EnemySpawner.cpp Source/PlaySpace.cpp Source/UI.cpp Source/GravitySource.h Source/PhysicsObject.h Source/Space.h Source/Game.h Source/Player.h Source/Enemy.h Source/EnemyBehavior.h Source/EnemySpawner.h Source/PlaySpace.h Source/Bullet.h Source/UI.h)
+add_executable(shinyavenger main.cpp Source/Bullet.cpp Source/GravitySource.cpp Source/Particle.cpp Source/Game.cpp Source/Player.cpp Source/Enemy.cpp Source/EnemySpawner.cpp Source/PlaySpace.cpp Source/UI.cpp Source/GravitySource.h Source/PhysicsObject.h Source/Space.h Source/Game.h Source/Player.h Source/Enemy.h Source/EnemyBehavior.h Source/EnemySpawner.h Source/PlaySpace.h Source/Bullet.h Source/UI.h Source/Particle.h)
 target_link_libraries(shinyavenger ${GLFW_LIBRARY} ${SPRINGBOK_LIBRARY} ${OPENGL_LIBRARY})
